# VIVIIan

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  architecture.md  benchmark_questdb_ilp.py  commands.txt  full_code_changes.txt  gse2_0.toml  mkdocs.yml  pyproject.toml  register_windows_init_task.ps1  requirements.txt  test.py  test.txt  unregister_windows_init_task.ps1  windows_init.bat
UCIRPLGUI/: README.md
api/: __init__.py  viviian.py
benchmarking/: benchmark_nidaq_usb.py  benchmark_questdb_ingress.py
benchmarks/: connector_throughput_benchmark.py  datastorage_benchmark.py  manager_benchmark.py
docs/: 3d-viewer-maintainer.md  3d-viewer.md  README.md  architecture.md  build-backend.md  build-device-interfaces.md  build-frontend.md  build-telemetry.md  build-with-viviian.md  connectors.md  contributing.md  datastorage.md  deviceinterface.md  examples.md  frontend.md  getting-started.md  gui-utils.md  index.md  orchestrator.md  reference.md  roadmap.md  simulation-utils.md
examples/: __init__.py
gui_client/: architecture.md  graph_widgets.py  requirements.txt  stream_buffer.py
gui_utils/: 3dmodel.py  __init__.py  _streaming.py  configure.py  graphs.py
nidaq_client/: config.py  nidaq_quest_split.py  nidaq_quest_stream.py  nidaq_quest_stream_fake.py
shared_config/: config_parser.py  live_toml_config.py
simulation_utils/: simulators.py
src/: architecture.md  requirements.txt
tests/: test_3dmodel.py  test_connector_benchmark_helpers.py  test_connector_utils.py  test_frontend.py  (+14 more)
(+173 files in other folders)
